--- a/v-1/css/cms.css
+++ b/v-1/css/cms.css
@@ -236,9 +236,10 @@ body {
 }
 .instruction-input{
     border-color: #4f4f4f;
-    width: 100px;
+    /* width: 100px; */
     padding: 0px;
     padding-left: 5px;
+    margin-top: -5px;
 }
 .instruction-input:focus{
     box-shadow: 0px 0px 5px #828282 !important;
