--- a/v-9/css/base.css
+++ b/v-9/css/base.css
@@ -310,3 +310,7 @@ table {
 #tui-image-editor-modal #tui-image-editor{
     height: 500px !important;
 }
+
+.cke_editable img, .cke_editable figure{
+    padding-right: 10px !important;
+}
